--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
@@ -2,24 +2,24 @@ merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ AISERVICE_INSTANCE_ID }}"
 
 ibm_kmodel:
   aiservice_instance_id: {{ AISERVICE_INSTANCE_ID }}
-  aibroker_internal_tls: "{{ AIBROKER_INTERNAL_TLS }}"
+  aiservice_internal_tls: "{{ AISERVICE_INTERNAL_TLS }}"
 
-  aibroker_namespace: "{{ AIBROKER_NAMESPACE }}"
+  aiservice_namespace: "{{ AISERVICE_NAMESPACE }}"
 
   pull_secret_name: "<path:{{ SECRETS_PATH }}:{{ IMAGE_PULL_SECRET_B64 }}>"
 
-  mas_aibroker_storage_provider: "{{ MAS_AIBROKER_STORAGE_PROVIDER }}"
-  mas_aibroker_storage_ssl: "{{ MAS_AIBROKER_STORAGE_SSL }}"
+  aiservice_storage_provider: "{{ AISERVICE_STORAGE_PROVIDER }}"
+  aiservice_storage_ssl: "{{ AISERVICE_STORAGE_SSL }}"
 
-  mas_aibroker_storage_accesskey: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_ACCESSKEY }}>"
-  mas_aibroker_storage_secretkey: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_SECRETKEY }}>"
-  mas_aibroker_storage_host: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_HOST }}>"
-  mas_aibroker_storage_port: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_PORT }}>"
-  mas_aibroker_storage_region: "{{ MAS_AIBROKER_STORAGE_REGION }}"
+  aiservice_storage_accesskey: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_ACCESSKEY }}>"
+  aiservice_storage_secretkey: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_SECRETKEY }}>"
+  aiservice_storage_host: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_HOST }}>"
+  aiservice_storage_port: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_PORT }}>"
+  aiservice_storage_region: "{{ AISERVICE_STORAGE_REGION }}"
 
-  mas_aibroker_storage_templates_bucket: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_BUCKET_TEMPLATES }}>"
-  mas_aibroker_storage_tenants_bucket: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_BUCKET_TENANTS }}>"
-  mas_aibroker_storage_pipelines_bucket: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_BUCKET_PIPELINES }}>"
+  aiservice_storage_templates_bucket: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_BUCKET_TEMPLATES }}>"
+  aiservice_storage_tenants_bucket: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_BUCKET_TENANTS }}>"
+  aiservice_storage_pipelines_bucket: "<path:{{ SECRETS_PATH }}:{{ SM_STORAGE_BUCKET_PIPELINES }}>"
 
   ssh_secret_name: "{{ SSH_SECRET_NAME }}"
 
@@ -27,7 +27,7 @@ ibm_kmodel:
   
   docker_server: "{{ DOCKER_SERVER }}"
 
-  mas_aibroker_provision_tenant: "{{ MAS_AIBROKER_PROVISION_TENANT }}"
+  aiservice_provision_tenant: "{{ AISERVICE_PROVISION_TENANT }}"
 
   primary_storage_class: "{{ PRIMARY_STORAGE_CLASS }}"
 
@@ -36,10 +36,10 @@ ibm_kmodel:
   image_watcher: "{{ IMAGE_WATCHER }}"
   image_controller: "{{ IMAGE_CONTROLLER }}"  
   
-  mas_aibroker_pipeline_steps_tag: "{{ MAS_AIBROKER_PIPELINE_STEPS_TAG }}"
-  mas_aibroker_connector_tag: "{{ MAS_AIBROKER_CONNECTOR_TAG }}"
+  aiservice_pipeline_steps_tag: "{{ AISERVICE_PIPELINE_STEPS_TAG }}"
+  aiservice_connector_tag: "{{ AISERVICE_CONNECTOR_TAG }}"
 
-  mas_aibroker_saas: "{{ MAS_AIBROKER_SAAS }}"
+  aiservice_saas: "{{ AISERVICE_SAAS }}"
   
   mas_app_channel: "{{ MAS_APP_CHANNEL }}"
   
