--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-odh-install.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-odh-install.yaml.j2
@@ -1,5 +1,5 @@
 ---
-merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ AIBROKER_INSTANCE_ID }}"
+merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ AISERVICE_INSTANCE_ID }}"
 
 ibm_odh:
   openshift_namespace: {{ OPENSHIFT_NAMESPACE }}
@@ -18,7 +18,7 @@ ibm_odh:
   odh_operator_version: {{ ODH_OPERATOR_VERSION }}
   odh_namespace: {{ ODH_NAMESPACE }}
 
-  aibroker_namespace: {{ AIBROKER_NAMESPACE }}
+  aiservice_namespace: {{ AISERVICE_NAMESPACE }}
   pull_secret_name: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_IMAGE_PULL_SECRET_B64 }}>"
 
   # ODH Pipeline operator
@@ -44,21 +44,21 @@ ibm_odh:
   opendatahub__sourceNamespace: {{ OPENDATAHUB_SOURCE_NAMESPACE }}
 
   # Storage configuration
-  mas_aibroker_storage_provider: {{ MAS_AIBROKER_STORAGE_PROVIDER }}
-  mas_aibroker_storage_accesskey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_STORAGE_ACCESSKEY }}>"
-  mas_aibroker_storage_secretkey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_STORAGE_SECRETKEY }}>"
-  mas_aibroker_storage_host: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_STORAGE_HOST }}>"
-  mas_aibroker_storage_port: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_STORAGE_PORT }}>"
-  mas_aibroker_storage_ssl: {{ MAS_AIBROKER_STORAGE_SSL }}
-  mas_aibroker_storage_region: "{{ MAS_AIBROKER_STORAGE_REGION }}"
-  mas_aibroker_storage_pipelines_bucket: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_STORAGE_BUCKET_DEFAULT }}>"
+  aiservice_storage_provider: {{ AISERVICE_STORAGE_PROVIDER }}
+  aiservice_storage_accesskey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_STORAGE_ACCESSKEY }}>"
+  aiservice_storage_secretkey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_STORAGE_SECRETKEY }}>"
+  aiservice_storage_host: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_STORAGE_HOST }}>"
+  aiservice_storage_port: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_STORAGE_PORT }}>"
+  aiservice_storage_ssl: {{ AISERVICE_STORAGE_SSL }}
+  aiservice_storage_region: "{{ AISERVICE_STORAGE_REGION }}"
+  aiservice_storage_pipelines_bucket: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_STORAGE_BUCKET_DEFAULT }}>"
 
   # MariaDB configuration
-  mas_aibroker_db_host: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_HOST }}>"
-  mas_aibroker_db_port: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_PORT }}>"
-  mas_aibroker_db_user: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_USER }}>"
-  mas_aibroker_db_database: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_DATABASE }}>"
-  mas_aibroker_db_secret_name: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_SECRET_NAME }}>"
-  mas_aibroker_db_secret_value: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_SECRET_VALUE }}>"
+  aiservice_db_host: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_HOST }}>"
+  aiservice_db_port: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_PORT }}>"
+  aiservice_db_user: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_USER }}>"
+  aiservice_db_database: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_DATABASE }}>"
+  aiservice_db_secret_name: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_SECRET_NAME }}>"
+  aiservice_db_secret_value: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MARIADB_SECRET_VALUE }}>"
 
   primary_storage_class: {{ PRIMARY_STORAGE_CLASS }}
