--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.yaml.j2
@@ -1,4 +1,4 @@
-{%- if (IS_EFS | lower == 'true') or (IS_S3 | lower == 'true') or (IS_MSK | lower == 'true') %}
+{%- if (IS_EFS | lower == 'true') or (IS_S3 | lower == 'true') or (IS_MSK | lower == 'true') or (IS_RDS | lower == 'true') %}
 #Common params starts
 cluster_name         = "{{ CLUSTER_ID}}"
 instance_name        = "{{ MAS_INSTANCE_ID }}"
@@ -14,14 +14,14 @@ cluster_prefix             = "{{MSK_CLUSTER_PREFIX}}"
 {%- endif %}
 
 
-{%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') %}
+{%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') or (IS_RDS | lower == 'true') %}
 
-#EFS/MSK related params starts
+#EFS/MSK/RDS related params starts
 vpc_name             = "{{ VPC_NAME_VALUE }}"
-#EFS/MSK related params ends
+#EFS/MSK/RDS related params ends
 {%- endif %}
 
-{%- if (IS_S3 | lower == 'true') or (IS_MSK | lower == 'true') %}
+{%- if (IS_S3 | lower == 'true') or (IS_MSK | lower == 'true') or (IS_RDS | lower == 'true') %}
 #S3/MSK related params starts
 name_prefix             = "{{ NAME_PREFIX_VALUE }}"
 #S3/MSK related params ends
@@ -32,20 +32,8 @@ name_prefix             = "{{ NAME_PREFIX_VALUE }}"
 create_s3_iam_group     = false
 create_s3_iam_policy    = false
 create_efs_policy       = false
-common_tags = {
-    "source"      = "terraform",
-    "environment" = "{{ENVIRONMENT_VALUE}}",
-    "owner"       = "{{OWNER_VALUE}}",
-    "contact"     = "{{CONTACT_VALUE}}",
-    "cost-center" = "{{COST_CENTER_VALUE}}"
-}
-create_bucket        = true
 s3_encryption_algorithm = "AES256"
 account_id = "{{ACCOUNT_ID}}"
-location = {
-    region             = "{{REGION_NAME}}"
-    availability_zones = ["{{REGION_NAME}}a", "{{REGION_NAME}}b", "{{REGION_NAME}}c"]
-}
 {%- if S3_MANAGE | lower == 'true'  %}
 #S3 Manage related params starts
 s3bucket_name_prefix_manage    = "massaas-cos-{{MAS_INSTANCE_ID}}-{{CLUSTER_ID}}"
@@ -69,4 +57,28 @@ s3_iam_users_list_manage = {
 {%- endif %}
 
 #S3 related params ends
+{%- endif %}
+
+{%- if (IS_S3 | lower == 'true') or (IS_RDS | lower == 'true') %}
+#S3/RDS related params starts
+create_bucket        = true
+common_tags = {
+    "source"      = "terraform",
+    "environment" = "{{ENVIRONMENT_VALUE}}",
+    "owner"       = "{{OWNER_VALUE}}",
+    "contact"     = "{{CONTACT_VALUE}}",
+    "cost-center" = "{{COST_CENTER_VALUE}}"
+}
+location = {
+    region             = "{{REGION_NAME}}"
+    availability_zones = ["{{REGION_NAME}}a", "{{REGION_NAME}}b", "{{REGION_NAME}}c"]
+}
+#S3/RDS related params ends
+{%- endif %}
+{%- if (IS_RDS | lower == 'true') %}
+#RDS related params starts
+engine_version            = "11.5.9.0.sb00063198.r1"
+db2_parameters_apply_type = "pending-reboot"
+s3bucket_name_prefix_db2    = "{{CLUSTER_ID}}-{{MAS_INSTANCE_ID}}-rds"
+#RDS related params ends
 {%- endif %}
