--- a/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
@@ -915,7 +915,7 @@ spec:
       when:
         - input: "$(params.maf_enabled)"
           operator: in
-          values: [""]
+          values: ["", "false"]
       workspaces:
         - name: configs
           workspace: configs
