corrected extra space

--- a/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-generate-common-files.yml.j2
@@ -201,6 +201,8 @@ spec:
         value: $(params.is_s3)
       - name: IS_MSK
         value: $(params.is_msk)
+      - name: IS_RDS
+        value: $(params.is_rds)
       - name: EFS_MANAGE_DB2_PERFORMANCE_MODE
         value: $(params.efs_manage_db2_performance_mode)
       - name: EFS_MANAGE_DB2_MOUNT_COUNT
