--- a/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
@@ -854,8 +854,44 @@ spec:
           operator: notin
           values: [""]
 
-    # 3. DB2 for IoT, Manage and Facilities
+    # 3. RDS-DB2 and DB2 for IoT, Manage and Facilities
     # -------------------------------------------------------------------------
+    # 3.1 RDS for IoT
+    - name: gitops-rds-db2-database-iot
+      params:
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/gitops-params.yml.j2') | indent(8) }}
+
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/secrets-params.yml.j2') | indent(8) }}
+
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/git-params.yml.j2') | indent(8) }}
+
+        - name: mas_instance_id
+          value: $(params.mas_instance_id)
+        - name: mas_app_id
+          value: iot
+        - name: replica_db
+          value: $(params.replica_db)
+        - name: jdbc-connection-url-additional-params
+          value: $(params.jdbc-connection-url-additional-params)
+
+      workspaces:
+        - name: configs
+          workspace: configs
+        - name: shared-gitops-configs
+          workspace: shared-gitops-configs
+      taskRef:
+          kind: Task
+          name: gitops-rds-db2-database
+      when:
+        - input: "$(params.db2_action_iot)"
+          operator: notin
+          values: [""]
+        - input: "$(params.jdbc_type_iot)"
+          operator: in
+          values: ["rds-db2"]
+        - input: "$(params.mas_app_channel_iot)"
+          operator: notin
+          values: [""]
 
     # 3.1 DB2 for IoT
     - name: gitops-db2u-database-iot
@@ -986,6 +1022,7 @@ spec:
     - name: gitops-jdbc-config-iot
       runAfter:
         - gitops-db2u-database-iot
+        - gitops-rds-db2-database-iot
       params:
         {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/gitops-params.yml.j2') | indent(8) }}
 
@@ -1023,6 +1060,42 @@ spec:
           operator: notin
           values: [""]
 
+    # 3.2 RDS for manage
+    - name: gitops-rds-db2-database-manage
+      params:
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/gitops-params.yml.j2') | indent(8) }}
+
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/secrets-params.yml.j2') | indent(8) }}
+
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/git-params.yml.j2') | indent(8) }}
+
+        - name: mas_instance_id
+          value: $(params.mas_instance_id)
+        - name: mas_app_id
+          value: iot
+        - name: replica_db
+          value: $(params.replica_db)
+        - name: jdbc-connection-url-additional-params
+          value: $(params.jdbc-connection-url-additional-params)
+
+      workspaces:
+        - name: configs
+          workspace: configs
+        - name: shared-gitops-configs
+          workspace: shared-gitops-configs
+      taskRef:
+          kind: Task
+          name: gitops-rds-db2-database
+      when:
+        - input: "$(params.db2_action_iot)"
+          operator: notin
+          values: [""]
+        - input: "$(params.jdbc_type_iot)"
+          operator: in
+          values: ["rds-db2"]
+        - input: "$(params.mas_app_channel_iot)"
+          operator: notin
+          values: [""]
     # 3.2 DB2 for Manage
     - name: gitops-db2u-database-manage
       params:
@@ -1155,6 +1228,7 @@ spec:
     - name: gitops-jdbc-config-manage
       runAfter:
         - gitops-db2u-database-manage
+        - gitops-rds-db2-database-manage
       params:
         {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/gitops-params.yml.j2') | indent(8) }}
 
@@ -1326,6 +1400,42 @@ spec:
           operator: notin
           values: [""]
 
+    # 3.3 RDS for facilities
+    - name: gitops-rds-db2-database-facilities
+      params:
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/gitops-params.yml.j2') | indent(8) }}
+
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/secrets-params.yml.j2') | indent(8) }}
+
+        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/git-params.yml.j2') | indent(8) }}
+
+        - name: mas_instance_id
+          value: $(params.mas_instance_id)
+        - name: mas_app_id
+          value: iot
+        - name: replica_db
+          value: $(params.replica_db)
+        - name: jdbc-connection-url-additional-params
+          value: $(params.jdbc-connection-url-additional-params)
+
+      workspaces:
+        - name: configs
+          workspace: configs
+        - name: shared-gitops-configs
+          workspace: shared-gitops-configs
+      taskRef:
+          kind: Task
+          name: gitops-rds-db2-database
+      when:
+        - input: "$(params.db2_action_facilities)"
+          operator: notin
+          values: [""]
+        - input: "$(params.jdbc_type_facilities)"
+          operator: in
+          values: ["rds-db2"]
+        - input: "$(params.mas_app_channel_facilities)"
+          operator: notin
+          values: [""]
     # 3.3 DB2 for Facilities
     - name: gitops-db2u-database-facilities
       params:
@@ -1456,6 +1566,7 @@ spec:
     - name: gitops-jdbc-config-facilities
       runAfter:
         - gitops-db2u-database-facilities
+        - gitops-rds-db2-database-facilities
       params:
         {{ lookup('template', pipeline_src_dir ~ '/taskdefs/gitops/common/gitops-params.yml.j2') | indent(8) }}
 
