[patch] MSO-2686 - Adding Manage Pytest digest to Optimizer launch FVT

--- a/tekton/src/tasks/fvt-launcher/mas-launchfvt-optimizer.yml.j2
+++ b/tekton/src/tasks/fvt-launcher/mas-launchfvt-optimizer.yml.j2
@@ -104,6 +104,12 @@ spec:
               name: mas-fvt-optimizer
               key: IVT_DIGEST_CORE
               optional: false
+        - name: FVT_DIGEST_MANAGE_PYTEST
+          valueFrom:
+            secretKeyRef:
+              name: mas-fvt-optimizer
+              key: FVT_DIGEST_MANAGE_PYTEST
+              optional: false
 
     - name: wait-for-pipelinerun
       image: quay.io/ibmmas/cli:latest
