RDS JDBC and Pipeline changes

--- a/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
@@ -870,7 +870,7 @@ spec:
         - name: mas_app_id
           value: iot
         - name: replica_db
-          value: $(params.replica_db)
+          value: $(params.replica_db_iot)
         - name: jdbc_connection_url_additional_params
           value: $(params.jdbc_connection_url_additional_params_iot)
 
@@ -1074,7 +1074,7 @@ spec:
         - name: mas_app_id
           value: iot
         - name: replica_db
-          value: $(params.replica_db)
+          value: $(params.replica_db_manage)
         - name: jdbc_connection_url_additional_params
           value: $(params.jdbc_connection_url_additional_params_manage)
 
@@ -1414,7 +1414,7 @@ spec:
         - name: mas_app_id
           value: iot
         - name: replica_db
-          value: $(params.replica_db)
+          value: $(params.replica_db_facilities)
         - name: jdbc_connection_url_additional_params
           value: $(params.jdbc_connection_url_additional_params_facilities)
 
