Changed mongo pull policy to always

--- a/tekton/src/tasks/gitops/gitops-mongo.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-mongo.yml.j2
@@ -99,7 +99,7 @@ spec:
         - /bin/sh
         - -c
       name: gitops-mongo
-      imagePullPolicy: IfNotPresent
+      imagePullPolicy: Always
       image: quay.io/ibmmas/cli:latest
   workspaces:
     - name: configs
