--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3instance-db2.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3instance-db2.yaml.j2
@@ -1,4 +1,4 @@
-module "s3buckets_instance" {
+module "s3buckets_instance_{{RDS_S3_APP_NAME}}" {
   source = "{{RDS_S3_SOURCE}}"
 
   tags                    = var.common_tags
