--- a/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
@@ -1070,7 +1070,7 @@ spec:
         - name: mas_instance_id
           value: $(params.mas_instance_id)
         - name: mas_app_id
-          value: iot
+          value: manage
         - name: replica_db
           value: $(params.replica_db_manage)
         - name: jdbc_connection_url_additional_params
@@ -1410,7 +1410,7 @@ spec:
         - name: mas_instance_id
           value: $(params.mas_instance_id)
         - name: mas_app_id
-          value: iot
+          value: facilities
         - name: replica_db
           value: $(params.replica_db_facilities)
         - name: jdbc_connection_url_additional_params
