[patch] Add certificate Issuer param for AI Service pipeline

--- a/tekton/src/params/install-aiservice.yml.j2
+++ b/tekton/src/params/install-aiservice.yml.j2
@@ -155,3 +155,9 @@
   description: token for RSL
   default: ""
 
+# MAS Application Configuration - IBM Maximo AI Service - Certificate Issuer
+# -----------------------------------------------------------------------------
+- name: aiservice_certificate_issuer
+  type: string
+  description: Name of the Issuer to configure AI Service to issue certificates
+  default: ""
