[patch] add support for Redhat Opeshift AI

--- a/tekton/src/params/install-aiservice.yml.j2
+++ b/tekton/src/params/install-aiservice.yml.j2
@@ -64,6 +64,10 @@
   type: string
   description: Model deployment type for ODH. Must be one of; [raw, serverless]
   default: "raw"
+- name: aiservice_rhoai_model_deployment_type
+  type: string
+  description: Model deployment type for Redhat Openshift AI. Must be one of; [raw, serverless]
+  default: "raw"
 
 - name: minio_root_user
   type: string
