--- a/tekton/src/tasks/dependencies/mongodb.yml.j2
+++ b/tekton/src/tasks/dependencies/mongodb.yml.j2
@@ -67,6 +67,16 @@ spec:
       description: Approves the MongoDb upgrade to version 8 if needed
       default: ""
 
+    # Backup/Restore specific parameters
+    - name: backup_version
+      type: string
+      description: Optional. Version/timestamp for the backup
+      default: ""
+    - name: mongodb_instance_name
+      type: string
+      description: Optional. MongoDB instance name for backup
+      default: ""
+
     # Dependencies - IBM Cloud MongoDb
     # -------------------------------------------------------------------------
     - name: ibmcloud_resourcegroup
@@ -147,6 +157,14 @@ spec:
         value: $(params.ibmcloud_resourcegroup)
       - name: IBMCLOUD_APIKEY
         value: $(params.ibmcloud_apikey)
+
+      # Backup/Restore specific
+      - name: MAS_BACKUP_DIR
+        value: /workspace/backups
+      - name: MONGODB_BACKUP_VERSION
+        value: $(params.backup_version)
+      - name: MONGODB_INSTANCE_NAME
+        value: $(params.mongodb_instance_name)
 
   steps:
     - name: mongodb
