[patch] fix aiservice tests

--- a/tekton/src/params/install-aiservice.yml.j2
+++ b/tekton/src/params/install-aiservice.yml.j2
@@ -68,6 +68,10 @@
   type: string
   description: Model deployment type for Redhat Openshift AI. Must be one of; [raw, serverless]
   default: "raw"
+- name: rhoai
+  type: string
+  description: flag to install rhoai
+  default: ""
 
 - name: minio_root_user
   type: string
