--- a/tekton/src/tasks/upload-backup-archive.yml.j2
+++ b/tekton/src/tasks/upload-backup-archive.yml.j2
@@ -89,5 +89,4 @@ spec:
       workingDir: /workspace/backups
 
   workspaces:
-    - name: shared-backup
-      optional: false
+    - name: backups
