--- a/tekton/src/tasks/dependencies/cert-manager.yml.j2
+++ b/tekton/src/tasks/dependencies/cert-manager.yml.j2
@@ -48,3 +48,7 @@ spec:
       image: quay.io/ibmmas/cli:latest
       imagePullPolicy: $(params.image_pull_policy)
       workingDir: /workspace/configs
+
+  workspaces:
+    - name: backups
+      optional: true
