Fixed variable name and added aiservice_instance_id into gitops mongo

--- a/tekton/src/tasks/gitops/gitops-mas-initiator.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-mas-initiator.yml.j2
@@ -36,7 +36,7 @@ spec:
       type: string
     - name: mas_instance_id
       type: string
-    - name: AISERVICE_INSTANCE_ID
+    - name: aiservice_instance_id
       type: string
       default: ""
     - name: mas_app_channel_assist
