--- a/tekton/src/tasks/gitops/gitops-mongo.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-mongo.yml.j2
@@ -28,6 +28,8 @@ spec:
     - name: aws_docdb_engine_version
       type: string
       default: 4.0.0
+    - name: aiservice_instance_id
+      type: string
   stepTemplate:
     name: gitops-mongo
     env:
