--- a/tekton/src/tasks/gitops/gitops-mas-initiator.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-mas-initiator.yml.j2
@@ -153,7 +153,7 @@ spec:
       - name: MAS_INSTANCE_ID
         value: $(params.mas_instance_id)
       - name: AISERVICE_INSTANCE_ID
-        value: $(params.AISERVICE_INSTANCE_ID)
+        value: $(params.aiservice_instance_id)
       - name: MAS_APP_CHANNEL_ASSIST
         value: $(params.mas_app_channel_assist)
       - name: MAS_APP_INSTALL_PLAN_ASSIST
